Fix styleguide sections when collapsed

--- a/styles/core.less
+++ b/styles/core.less
@@ -99,5 +99,8 @@ atom-notifications {
 }
 
 .styleguide-sections > section {
-  background: transparent;
+  &,
+  &.collapsed {
+    background: transparent;
+  }
 }
